[project]
name = "rdd-predict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.9",
    "cloud-tpu-client>=0.10",
    "cloudinary>=1.44.1",
    "fastapi[standard]>=0.124.4",
    "opencv-python<4.10.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "tensorflow==2.17.0",
    "tensorrt-cu12>=10.14.1.48.post1",
    "torch>=2.3.0,<2.4.0",
    "torchaudio>=2.3.0,<2.4.0",
    "torchvision>=0.18.0,<0.19.0",
    "ultralytics>=8.3.237",
    "uvicorn>=0.38.0",
    "websockets>=12.0",
    "python-socketio>=5.11.0",
]
